--- a/server/public/training.html
+++ b/server/public/training.html
@@ -9,14 +9,14 @@
       <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
       <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
-	  
+
       <!-- Include Date Range Picker -->
       <title> Telepathy </title>
    </head>
 	<style>
 
 	</style>
-   <script type="text/javascript"src="js/controller.js"></script>
+   <script type="text/javascript"src="js/controllerTraining.js"></script>
    <body ng-app="myApp">
       <div class="container" ng-controller="mainController">
          <h2>Team Telepathy Data Collection</h2>
