fixed clown problem

--- a/server/public/recognise.html
+++ b/server/public/recognise.html
@@ -44,7 +44,7 @@
           <div ng-if="viewingPic == 0">
              <h2>Team Telepathy Brainwave recognition!</h2>
              <p>Press the button when you are ready to be recognized</p>
-             <div class="loader"></div>
+             <!--   <div class="loader"></div> -->
              <hr>
 
                 <button class="button" ng-click="startCapture()" > Start Brain Wave Trial!</button>
