--- a/server/public/training.html
+++ b/server/public/training.html
@@ -14,11 +14,22 @@
       <title> Telepathy </title>
    </head>
 	<style>
+    #image {
+        background-image : url("black.jpeg");
+        background-size: 100% 100%;
+        position:absolute;
+        z-index:0;
+        left:0;
+        top:0;
+        width:100%;
+        height:100%;
+    }
 
 	</style>
    <script type="text/javascript"src="js/controllerTraining.js"></script>
    <body ng-app="myApp">
       <div class="container" ng-controller="mainController">
+          <div ng-if="viewingPic == 0">
          <h2>Team Telepathy Data Collection</h2>
          <p>Press the button when you are ready to collect data</p>
          <div class="dropdown">
@@ -29,9 +40,12 @@
             </ul>
          </div>
          <hr>
-         <a href="/dataCapture.html">
             <button class="button" ng-click="startCapture()" > Start Brain Wave Trial!</button>
-        </a>
+
+    </div>
+    <div ng-if="viewingPic == 1">
+        <div id="image"  class="container" ng-controller="mainController">
+    </div>
 
 
       </div>
