--- a/server/public/game.html
+++ b/server/public/game.html
@@ -8,7 +8,10 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.js"></script>
     <script src="js/sketch.js"></script>
   </head>
-  <body>
+  <body ng-app="myApp">
+      <script type="text/javascript"src="js/result.js"></script>
+     <div class="container" ng-controller="mainController">
     <h1>Flappy Bird!</h1>
+    </div>
   </body>
 </html>
