--- a/server/public/recognise.html
+++ b/server/public/recognise.html
@@ -9,13 +9,24 @@
       <script type="text/javascript" src="//cdn.jsdelivr.net/momentjs/latest/moment.min.js"></script>
       <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.js"></script>
 
       <!-- Include Date Range Picker -->
       <title> Telepathy </title>
    </head>
 	<style>
+    #brain {
+        background-image : url("brainstem.jpg");
+        background-size: 100% 100%;
+        position:absolute;
+        z-index:0;
+        left:0;
+        top:0;
+        width:100%;
+        height:100%;
+    }
     #image {
-        background-image : url("black.jpeg");
+        background-image : url("black.jpg");
         background-size: 100% 100%;
         position:absolute;
         z-index:0;
@@ -37,24 +48,31 @@
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
     }
+
 	</style>
    <script type="text/javascript"src="js/controllerRecognise.js"></script>
    <body ng-app="myApp">
       <div class="container" ng-controller="mainController">
-          <div ng-if="viewingPic == 0">
-             <h2>Team Telepathy Brainwave recognition!</h2>
-             <p>Press the button when you are ready to be recognized</p>
+          <p style="color: white"> {{ status.stat }} </p>
+          <div id="brain"  ng-show="status.stat == 0"class="ng-hide">
+
+             <h2 style="color: white">Team Telepathy Brainwave recognition!</h2>
+             <p style="color: white">Press the button when you are ready to be recognized</p>
              <!--   <div class="loader"></div> -->
              <hr>
 
                 <button class="button" ng-click="startCapture()" > Start Brain Wave Trial!</button>
 
-        </div>
-        <div ng-if="viewingPic == 1">
-            <div id="image"  class="container" ng-controller="mainController">
-        </div>
+                <p style="color: white">Press the button below if you are a new user and would like to train!</p>
+                <a href="/training">
+                    <button class="button" > New User </button>
+                </a>
+            </div>
+        <div ng-show="status.stat == 1"class="ng-hide">
+            <div id="image"  class="container" ng-controller="mainController"></div>
         </div>
 
-      </div>
+    </div>
+
    </body>
 </html>
