--- a/server/public/recognise.html
+++ b/server/public/recognise.html
@@ -16,7 +16,7 @@
    </head>
 	<style>
     #brain {
-        background-image : url("brainstem.jpg");
+        background-image : url("grey.jpg");
         background-size: 100% 100%;
         position:absolute;
         z-index:0;
@@ -48,29 +48,62 @@
         0% { transform: rotate(0deg); }
         100% { transform: rotate(360deg); }
     }
+    #box {
+        height: 480px;
+        width: 640px;
+
+
+        position: fixed;
+
+        top: 10%;
+        left: 40%;
+        margin-top: -100px;
+        margin-left: -200px;
+    }
+    #box2 {
+        height: 400px;
+        width: 570px;
+        background-image : url("headset.png");
+
+
+        position: fixed;
+        left: 40%;
+        top: 60%;
+
+        margin-top: -100px;
+        margin-left: -200px;
+    }
 
 	</style>
    <script type="text/javascript"src="js/controllerRecognise.js"></script>
    <body ng-app="myApp">
       <div class="container" ng-controller="mainController">
+          <div ng-show="status.stat == 1"class="ng-hide">
+              <div id="image"  class="container" ng-controller="mainController"></div>
+          </div>
           <p style="color: white"> {{ status.stat }} </p>
           <div id="brain"  ng-show="status.stat == 0"class="ng-hide">
-
-             <h2 style="color: white">Team Telepathy Brainwave recognition!</h2>
-             <p style="color: white">Press the button when you are ready to be recognized</p>
+              <div id="box2"></div>
+              <center>
+              <div id="box">
+             <h2 >Team Telepathy Brainwave recognition!</h2>
+             <p>Press the button when you are ready to be recognized</p>
              <!--   <div class="loader"></div> -->
-             <hr>
+
 
                 <button class="button" ng-click="startCapture()" > Start Brain Wave Trial!</button>
+                 <hr>
+                  <hr>
+                   <hr>
 
-                <p style="color: white">Press the button below if you are a new user and would like to train!</p>
+                <p >Press the button below if you are a new user and would like to train!</p>
                 <a href="/training">
-                    <button class="button" > New User </button>
+                    <button class="button" > Training </button>
                 </a>
+            </center>
             </div>
-        <div ng-show="status.stat == 1"class="ng-hide">
-            <div id="image"  class="container" ng-controller="mainController"></div>
         </div>
+
 
     </div>
 
