--- a/server/public/result.html
+++ b/server/public/result.html
@@ -10,6 +10,7 @@
       <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/bootstrap/3/css/bootstrap.css" />
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.7/p5.js"></script>
+      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 
       <!-- Include Date Range Picker -->
       <title> Telepathy </title>
@@ -32,6 +33,31 @@
     width: 120px;
     height: 120px;
     animation: spin 2s linear infinite;
+
+    position: fixed;
+    top: 45%;
+    left: 45%;
+}
+#result{
+    background-image : url("grey.jpg");
+    background-size: 100% 100%;
+    position:absolute;
+    z-index:0;
+    left:0;
+    top:0;
+    width:100%;
+    height:100%;
+}
+#box {
+    height: 4800px;
+    width: 640px;
+
+
+    position: fixed;
+    top: 40%;
+    left: 40%;
+    margin-top: -100px;
+    margin-left: -200px;
 }
 
 @keyframes spin {
@@ -39,7 +65,7 @@
     100% { transform: rotate(360deg); }
 }
    </style>
-   <body ng-app="myApp">
+   <body ng-app="myApp" background="grey.jpg">
        <script type="text/javascript"src="js/result.js"></script>
       <div class="container" ng-controller="mainController">
 
@@ -47,12 +73,25 @@
         <div id="brain" ng-if="person == ''">
             <div class="loader"></div>
         </div>
-        <div ng-if="person != ''">
-            <h1 style="text-align: center; padding='40px'"> Welcome {{ person }}!</h1>
-            <p style="color: white">Press the button below to start the game!</p>
-            <a href="/game">
+        <div id="result" ng-if="person != ''">
+
+  <!-- next assignment is to make a profile page with one grid no embeding -->
+
+
+
+
+            <div id="box">
+                <center>
+            <h1 style="font-size: 100px;" > Welcome {{ person }}!</h1>
+            <p >Press the button below to start the game!</p>
+            <a  href="/game">
                 <button class="button" > Play the game! </button>
             </a>
+            <br>
+            <hr>
+            <p  style="font-size: 12px"> Is this not you? Press <a href="/">this link</a> to try again </p>
+        </center>
+        </div>
         </div>
     </div>
 
