changed path result.html -> result. updated app.js to work for recognition. Added support for rejecting a sample based on it having to few samples. Simply write 'tooFewSamples' in the output.txt

--- a/server/public/game.html
+++ b/server/public/game.html
@@ -24,7 +24,7 @@
   <body ng-app="myApp" id="back" >
       <script type="text/javascript"src="js/result.js"></script>
      <div class="container" ng-controller="mainController">
-    <h1>Flappy Bird!</h1>
+    <h1>Flippy Bird!</h1>
     </div>
   </body>
 </html>
