--- a/server/public/training.html
+++ b/server/public/training.html
@@ -16,7 +16,7 @@
 </head>
 <style>
     #norm{
-        background-image : url("grey.jpg");
+        background-image : url("img/grey.jpg");
         background-size: 100% 100%;
         position:absolute;
         z-index:0;
@@ -37,7 +37,7 @@
         margin-left: -200px;
     }
     #image {
-        background-image : url("black.jpg");
+        background-image : url("img/black.jpg");
         background-size: 100% 100%;
         position:absolute;
         z-index:0;
