--- a/server/public/game.html
+++ b/server/public/game.html
@@ -11,7 +11,7 @@
   </head>
   <style>
   #back {
-      background-image : url("flappy.png");
+      background-image : url("img/flappy.png");
       background-size: 100% 100%;
       position:absolute;
       z-index:0;
