--- a/server/public/recognise.html
+++ b/server/public/recognise.html
@@ -16,7 +16,7 @@
    </head>
 	<style>
     #brain {
-        background-image : url("grey.jpg");
+        background-image : url("img/grey.jpg");
         background-size: 100% 100%;
         position:absolute;
         z-index:0;
@@ -26,7 +26,7 @@
         height:100%;
     }
     #image {
-        background-image : url("black.jpg");
+        background-image : url("img/black.jpg");
         background-size: 100% 100%;
         position:absolute;
         z-index:0;
