adjusted style on training page

--- a/server/public/recognise.html
+++ b/server/public/recognise.html
@@ -63,7 +63,7 @@
     #box2 {
         height: 400px;
         width: 570px;
-        background-image : url("headset.png");
+        background-image : url("img/headset.png");
 
 
         position: fixed;
